# pdf_to_image

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  workthread.cpp  workthread.h
docker/: README.md  docker-compose.yml
docker/backend/: Dockerfile  main.py  requirements.txt
docker/frontend/: Dockerfile  index.html  nginx.conf  package.json
docker/frontend/src/: App.vue
docs/: build.md
